--- a/src/index.njk
+++ b/src/index.njk
@@ -140,26 +140,32 @@
 
 
 <section class="container-fluid biz-section">
-	<div class="row align-items-stretch g-4">
-		<!-- Image on top at xs, left at lg -->
+	<div class="row align-items-stretch gx-0">
+		<!-- Image -->
 		<div class="col-12 col-lg-6 p-0 biz-img">
 			<img src="/assets/images/hero.jpg" alt="Get Business Insights from the Experts"
 				class="img-fluid w-100 rounded shadow">
 		</div>
 
-		<!-- Text below on xs, right on lg -->
-		<div class="col-12 col-lg-6 d-flex align-items-center justify-content-center bg-black text-light p-4">
-			<div class="text-center text-lg-start">
+		<!-- Text: flex parent, centers its child -->
+		<div class="col-12 col-lg-6 d-flex align-items-center justify-content-center
+             bg-black text-light p-4">
+			<!-- Constrained box, centered -->
+			<div class="mx-auto text-center text-lg-start" style="max-width: 600px;">
 				<h2 class="fw-bold mb-3 biz-heading">
 					Get Business Insights from the Experts
 				</h2>
-				<h5 class="mb-4 text-muted">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos officiis
-					voluptatibus quae ipsam saepe aperiam…
+				<h5 class="mb-4 biz-text-muted">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores
+					assumenda enim aperiam recusandae! Minus nobis earum velit numquam nam
+					consectetur eum inventore. Excepturi, rerum?
 				</h5>
 				<p class="mb-4 biz-copy">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam id cum
-					architecto aliquid illum, ipsum distinctio laborum hic, alias quo…
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod quam non, tempora
+					corporis explicabo distinctio dolores at? Explicabo dolores minima minus magni
+					nam vitae natus amet, a quod accusamus, incidunt quam, laborum officiis
+					provident mollitia nesciunt veritatis ipsam repellendus excepturi eius officia
+					optio perferendis? Doloremque impedit nulla vitae aliquid perferendis?
 				</p>
 				<a href="/" class="btn btn-dark biz-btn">
 					Learn more
